--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.1",
+    "@google/genai": "^1.34.0",
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.5",
     "@supabase/supabase-js": "^2.45.0",
