--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.5",
     "@supabase/supabase-js": "^2.45.0",
-    "mapbox-gl": "^3.17.0",
+    "leaflet": "^1.9.4",
     "marked": "^17.0.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.0",
@@ -23,6 +23,7 @@
     "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.21",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vitejs/plugin-vue": "^5.0.0",
