refactor: reorganize project folder structure

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.5",
     "@supabase/supabase-js": "^2.45.0",
+    "@vueuse/core": "^14.1.0",
     "leaflet": "^1.9.4",
     "marked": "^17.0.1",
     "pinia": "^2.1.7",
