feat: optimize trips UI, profile settings, and SEO
- Redesigned Trips list with TravelMate branding and Chinese localization
- Implemented Profile settings page and User Menu component
- Added JoinTripModal and localized CreateTripModal
- Enhanced SEO with meta tags, favicon, and dynamic page titles
- Fixed SVG path error in InviteModal
- Improved auth redirect logic and auto-join via URL
- Added clearExpenses utility script

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/vue": "^2.1.5",
     "@supabase/supabase-js": "^2.45.0",
     "@vueuse/core": "^14.1.0",
+    "dotenv": "^17.2.3",
     "leaflet": "^1.9.4",
     "marked": "^17.0.1",
     "pinia": "^2.1.7",
