--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@headlessui/vue": "^1.7.22",
     "@heroicons/vue": "^2.1.5",
     "@supabase/supabase-js": "^2.45.0",
+    "@tresjs/cientos": "^5.3.1",
+    "@tresjs/core": "^5.4.1",
     "@vueuse/core": "^14.1.0",
     "dompurify": "^3.3.1",
     "dotenv": "^17.2.3",
+    "gsap": "^3.14.2",
     "leaflet": "^1.9.4",
     "marked": "^17.0.1",
     "pinia": "^2.1.7",
     "qrcode": "^1.5.4",
+    "three": "^0.182.0",
     "vue": "^3.4.0",
     "vue-router": "^4.3.0",
     "vuedraggable": "^4.1.0"
